Refine Article Spacing, Change Footer from Fixed to at Bottom of Content or Screen

--- a/public/styles.css
+++ b/public/styles.css
@@ -8,3 +8,7 @@ body {
     padding-right: 1rem;
   }
 }
+
+.markdown ul > li {
+  list-style-type: disc;
+}
